--- a/css/styles.css
+++ b/css/styles.css
@@ -502,43 +502,57 @@ img {
     margin-left: 80px;
 }
 
-.send-email {
-    margin-top: 16px;
-    display: flex;
-    gap: 24px;
-    
+.form-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
 }
 
-.subscribe-email {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 200%;
-    letter-spacing: 0.04em;
-    color: #fff;
-    background-color: transparent;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    min-width: 264px;
+.footer-form {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-sub-text {
+    width: 264px;
     height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: #ffffff;
+    font-weight: 400;
     padding-top: 8px;
     padding-bottom: 8px;
-    padding-left: 16px;
+}
+
+.footer-email-placeh {
+    color: #ffffff;
 }
 
 .sub-btn {
+    min-width: 165px;
+    height: 40px;
     display: flex;
-    background-color: #4d5ae5;
-    font-family: inherit;
-    font-weight: 500;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
+    font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #fff;
+    color: #ffffff;
     cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;        
     border-radius: 4px;
-    border: none;
-    height: 40px;
-    min-width: 165px;
     padding: 8px 24px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -560,7 +574,7 @@ img {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(46, 47, 66, 0.341);
+    background-color: rgba(46, 47, 66, 0.4);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -581,6 +595,8 @@ img {
     position: absolute;
     top: 50%;
     left: 50%;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    padding: 72px 24px 24px 24px;
     transform: translate(-50%, -50%);
     padding: 24px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -625,7 +641,6 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-align: center;
-    margin-top: 48px;
     margin-bottom: 16px;
 }
 
@@ -633,20 +648,21 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .modal-field {
     margin-bottom: 8px;
     width: 100%;
-
 }
+
 .form-label {
     font-weight: 400;
     font-size: 12px;
     line-height: 117%;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    display: block;
+    margin-bottom: 4px;
 }
 
 .modal-input-wrap {
@@ -659,6 +675,9 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     padding-left: 38px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:hover,
@@ -671,7 +690,6 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: #4d5ae5;;
 }
 
-
 .form-input::placeholder {
     color: rgba(46, 47, 66, 0.4);
 }
@@ -679,22 +697,33 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-icon {
     fill: #2e2f42;
     position: absolute;
-    left: 19px;
+    left: 16px;
     top: 50%;
     transform: translateY(-50%);
-
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
+.modal-field-comment 
+    
+
 .coment {
+    width: 100%;
     min-height: 120px;
-    padding-left: 16px;
-    padding-top: 8px;
+    margin-bottom: 16px;
     color: rgba(46, 47, 66, 0.4);
     font-weight: 400;
     font-size: 12px;
     line-height: 117%;
     letter-spacing: 0.04em;
     resize: none;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.check {
+    margin-bottom: 24px;
 }
 
 .check-text {
@@ -709,15 +738,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-top: 8px;
 }
 
-.check-text a {
-    line-height: 133%;
-    text-decoration: underline;
-    text-decoration-skip-ink: none;
-    color: #4d5ae5;
-    
-}
-
-.check-text span {
+.check-privacy {
     width: 16px;
     height: 16px;
     border-radius: 2px;
@@ -727,15 +748,42 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     align-items: center;
     justify-content: center;
     fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
 }
 
-.form-check:checked +.check-text span {
+.check-text a {
+    line-height: 133%;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+    
+}
+
+/* .check-text span {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    margin-right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+} */
+
+.form-check:checked +.check-privacy {
     background-color: #404bbf;;
     border: none;
     fill: #f4f4fd;
 }
 
+.privacy-link {
+    color: #4d5ae5;
+}
+
 .form-btn {
+    min-width: 169px;
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
@@ -746,10 +794,10 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border:none;
     border-radius: 4px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    width: 169px;
+    cursor: pointer;
     padding: 16px 32px;
     margin-top: 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-btn:hover,
