--- a/css/styles.css
+++ b/css/styles.css
@@ -598,7 +598,6 @@ img {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     padding: 72px 24px 24px 24px;
     transform: translate(-50%, -50%);
-    padding: 24px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -703,8 +702,9 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.modal-field-comment 
-    
+.modal-field-comment {
+    width: 100%;
+}
 
 .coment {
     width: 100%;
@@ -759,8 +759,8 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #4d5ae5;
     
 }
-
-/* .check-text span {
+ 
+.check-text span {
     width: 16px;
     height: 16px;
     border-radius: 2px;
@@ -770,9 +770,9 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     align-items: center;
     justify-content: center;
     fill: transparent;
-} */
+} 
 
-.form-check:checked +.check-privacy {
+.form-check:checked +.check-text span {
     background-color: #404bbf;;
     border: none;
     fill: #f4f4fd;
