--- a/css/styles.css
+++ b/css/styles.css
@@ -533,7 +533,7 @@ img {
     padding-bottom: 8px;
 }
 
-.footer-email-placeh {
+.footer-sub-text::placeholder {
     color: #ffffff;
 }
 
@@ -704,12 +704,12 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .modal-field-comment {
     width: 100%;
+    margin-bottom: 16px;
 }
 
 .coment {
     width: 100%;
     min-height: 120px;
-    margin-bottom: 16px;
     color: rgba(46, 47, 66, 0.4);
     font-weight: 400;
     font-size: 12px;
@@ -735,10 +735,11 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     align-items: center;
     position: relative;
-    margin-top: 8px;
+    /* margin-top: 8px; */
 }
 
 .check-privacy {
+    display: inline-flex;
     width: 16px;
     height: 16px;
     border-radius: 2px;
@@ -749,7 +750,6 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     justify-content: center;
     fill: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
 }
 
 .check-text a {
