--- a/css/styles.css
+++ b/css/styles.css
@@ -761,12 +761,13 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  
 .check-text span {
+    display: inline-flex;
     width: 16px;
     height: 16px;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     margin-right: 8px;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     fill: transparent;
