--- a/css/styles.css
+++ b/css/styles.css
@@ -745,7 +745,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     margin-right: 8px;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     fill: transparent;
