--- a/css/styles.css
+++ b/css/styles.css
@@ -745,7 +745,6 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     margin-right: 8px;
-    /* display: flex; */
     align-items: center;
     justify-content: center;
     fill: transparent;
@@ -760,18 +759,17 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
  
-.check-text span {
+/* .check-text span {
     display: inline-flex;
     width: 16px;
     height: 16px;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     margin-right: 8px;
-    /* display: flex; */
     align-items: center;
     justify-content: center;
     fill: transparent;
-} 
+}  */
 
 .form-check:checked +.check-text span {
     background-color: #404bbf;;
