--- a/css/styles.css
+++ b/css/styles.css
@@ -723,7 +723,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check {
-    margin-bottom: 24px;
+    margin-bottom: 0;
 }
 
 .check-text {
@@ -732,10 +732,9 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     line-height: 117%;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     position: relative;
-    /* margin-top: 8px; */
 }
 
 .check-privacy {
